<?xml version="1.0"?>
<package format="2">
  <name>serial_stream</name>
  <version>0.0.1</version>
  <description>ROS package for serial stream communication.</description>

  <maintainer email="sgrsn1711@gmail.com">Hidaka Sato</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>libserial-dev</depend>

  <export>
  </export>
</package>
