<?xml version="1.0"?>
<package format="3">
  <name>serial_stream</name>
  <version>0.0.1</version>
  <description>ROS package for serial stream communication.</description>

  <maintainer email="sgrsn1711@gmail.com">Hidaka Sato</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <build_depend>libserial-dev</build_depend>
  <exec_depend>libserial-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
